--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+:root {
+  --dark-bg: #070707;
+  --light-bg: #424242;
+  --gradient-bg: linear-gradient(45deg, #161618, #2e2e30);
+  --box-shadow-light: 30px 30px 60px 0 rgba(0, 0, 0, 0.37);
+  --box-shadow-dark: 30px 30px 60px 0 rgba(0, 0, 0, 0.8);
+  --text-primary: #ffffff;
+  --text-secondary: #bfbfbf;
+  --text-highlight: #9bda00;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background: var(--light-bg);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  text-decoration: none;
+  color: inherit;
 }
