--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,28 @@
+:root {
+  --dark-bg: #070707;
+  --light-bg: #424242;
+  --gradient-bg: linear-gradient(45deg, #161618, #2e2e30);
+  --box-shadow-light: 30px 30px 60px 0 rgba(0, 0, 0, 0.37);
+  --box-shadow-dark: 30px 30px 60px 0 rgba(0, 0, 0, 0.8);
+  --text-primary: #ffffff;
+  --text-secondary: #bfbfbf;
+  --text-highlight: #9bda00;
+  --font-family-primary: "Montserrat", sans-serif;
+  --font-family-secondary: "Roboto", sans-serif;
+}
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  height: 100vh;
+  font-family: var(--font-family-secondary);
+  background: var(--light-bg);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
